Set a dedicated user agent

This should make it easier for servers to see Tokodon in their logs,
instead of the default Mozilla user agent. An example user agent is
"tokodon/25.03.70".

BUG: 499276